cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_dynamic_playlist_command_case_2@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Some(
    DynamicPlaylist {
        id: Thing {
            tb: "dynamic",
            id: String(
                "01J1K5B6RJ84WJXCWYJ5WNE12E",
            ),
        },
        name: "Test Dynamic",
        query: Query {
            root: Leaf(
                LeafClause {
                    left: Field(
                        Title,
                    ),
                    operator: Equal,
                    right: String(
                        "Test Song",
                    ),
                },
            ),
        },
    },
)
