cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_dynamic_playlist_command_case_4@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Dynamic playlist deleted
