cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_dynamic_playlist_export_existing_file@export_existing.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(std::fs::read(path).unwrap()).unwrap()"
---
dynamic playlist name,query
Test Dynamic,"title = ""Test Song"""
