cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_dynamic_playlist_export_existing_file@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: stdout
---
Daemon response:
Dynamic playlists exported to {tempdir}/export_dynamic.csv
