cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_dynamic_playlist_export_path_canonicalize_falls_back@stderr.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: stderr
---
Failed to canonicalize {tempdir}/export_dynamic.csv: No such file or directory (os error 2)
