cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_dynamic_playlist_import_nonexistent_path_reports_error@stderr.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: stderr
---
Failed to canonicalize {tempdir}/does_not_exist.csv: No such file or directory (os error 2)
